--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -128,6 +128,29 @@ jobs:
             paths:
                 - ~/.m2
 
+        - persist_to_workspace:
+            root: dist
+            paths:
+              - dollar
+
+    docker:
+      <<: *defaults
+
+      steps:
+
+        - checkout
+
+        - attach_workspace:
+            at: ~/dist
+
+        - run:
+            name: build-and-deploy
+            command: |
+                ./build-docker.sh
+                ./deploy-docker.sh
+
+
+
 workflows:
   version: 2
   build-test-and-deploy:
@@ -151,6 +174,12 @@ workflows:
           requires:
             - docs
             - maven-site
+          filters:
+            branches:
+              only: master
+      - docker:
+          requires:
+            - dist
           filters:
             branches:
               only: master
