--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -157,12 +157,6 @@ workflows:
   build-test-and-deploy:
     jobs:
       - build
-      - promote:
-          requires:
-            - build
-          filters:
-            branches:
-              only: staging
       - maven-deploy:
           requires:
             - build
@@ -172,6 +166,13 @@ workflows:
       - docs:
           requires:
             - build
+      - promote:
+          requires:
+            - build
+            - docs
+          filters:
+            branches:
+              only: staging
       - dist:
           requires:
             - build
