--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -157,15 +157,16 @@ workflows:
   build-test-and-deploy:
     jobs:
       - build
-      - maven-deploy:
-          requires:
-            - build
-          filters:
-            branches:
-              only: master
       - docs:
           requires:
             - build
+      - maven-deploy:
+          requires:
+            - build
+            - docs
+          filters:
+            branches:
+              only: master
       - promote:
           requires:
             - build
