--- a/dollar-script/pom.xml
+++ b/dollar-script/pom.xml
@@ -93,10 +93,10 @@
             <groupId>com.beust</groupId>
             <artifactId>jcommander</artifactId>
         </dependency>
-        <dependency>
-            <groupId>net.kencochrane.raven</groupId>
-            <artifactId>raven</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>net.kencochrane.raven</groupId>-->
+            <!--<artifactId>raven</artifactId>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
