--- a/pom.xml
+++ b/pom.xml
@@ -360,18 +360,18 @@
                 <version>2.9.0</version>
                 <scope>test</scope>
             </dependency>
-            <dependency>
-                <groupId>net.kencochrane.raven</groupId>
-                <artifactId>raven</artifactId>
-                <version>6.0.0</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>org.slf4j</groupId>
-                        <artifactId>slf4j-api</artifactId>
-                    </exclusion>
-                </exclusions>
+            <!--<dependency>-->
+                <!--<groupId>net.kencochrane.raven</groupId>-->
+                <!--<artifactId>raven</artifactId>-->
+                <!--<version>6.0.0</version>-->
+                <!--<exclusions>-->
+                    <!--<exclusion>-->
+                        <!--<groupId>org.slf4j</groupId>-->
+                        <!--<artifactId>slf4j-api</artifactId>-->
+                    <!--</exclusion>-->
+                <!--</exclusions>-->
 
-            </dependency>
+            <!--</dependency>-->
             <dependency>
                 <groupId>org.codehaus.jackson</groupId>
                 <artifactId>jackson-mapper-asl</artifactId>
