--- a/dollar-runtime/pom.xml
+++ b/dollar-runtime/pom.xml
@@ -180,6 +180,7 @@
                                 <exclude>org.w3c.**</exclude>
                                 <exclude>org.xml.**</exclude>
                                 <exclude>org.slf4j.**</exclude>
+                                <exclude>org.jvnet.hudson.**</exclude>
                             </excludes>
                         </relocation>
                         <relocation>
