--- a/pom.xml
+++ b/pom.xml
@@ -340,22 +340,9 @@
             </dependency>
 
             <dependency>
-
-                    <groupId>com.sellelien</groupId>
-                    <artifactId>github-api</artifactId>
-                    <version>0.1.17</version>
-
-
-                <exclusions>
-                    <exclusion>
-                        <artifactId>commons-codec</artifactId>
-                        <groupId>commons-codec</groupId>
-                    </exclusion>
-                    <exclusion>
-                        <artifactId>commons-io</artifactId>
-                        <groupId>commons-io</groupId>
-                    </exclusion>
-                </exclusions>
+                <groupId>com.sillelien</groupId>
+                <artifactId>github-api</artifactId>
+                <version>0.1.28</version>
             </dependency>
             <dependency>
                 <groupId>com.jayway.restassured</groupId>
@@ -364,15 +351,15 @@
                 <scope>test</scope>
             </dependency>
             <!--<dependency>-->
-                <!--<groupId>net.kencochrane.raven</groupId>-->
-                <!--<artifactId>raven</artifactId>-->
-                <!--<version>6.0.0</version>-->
-                <!--<exclusions>-->
-                    <!--<exclusion>-->
-                        <!--<groupId>org.slf4j</groupId>-->
-                        <!--<artifactId>slf4j-api</artifactId>-->
-                    <!--</exclusion>-->
-                <!--</exclusions>-->
+            <!--<groupId>net.kencochrane.raven</groupId>-->
+            <!--<artifactId>raven</artifactId>-->
+            <!--<version>6.0.0</version>-->
+            <!--<exclusions>-->
+            <!--<exclusion>-->
+            <!--<groupId>org.slf4j</groupId>-->
+            <!--<artifactId>slf4j-api</artifactId>-->
+            <!--</exclusion>-->
+            <!--</exclusions>-->
 
             <!--</dependency>-->
             <dependency>
@@ -536,14 +523,14 @@
                 </configuration>
             </plugin>
             <!--<plugin>-->
-                <!--<groupId>org.codehaus.mojo</groupId>-->
-                <!--<artifactId>findbugs-maven-plugin</artifactId>-->
-                <!--<version>3.0.2</version>-->
-                <!--<configuration>-->
-                    <!--<effort>Max</effort>-->
-                    <!--<threshold>Low</threshold>-->
-                    <!--<xmlOutput>true</xmlOutput>-->
-                <!--</configuration>-->
+            <!--<groupId>org.codehaus.mojo</groupId>-->
+            <!--<artifactId>findbugs-maven-plugin</artifactId>-->
+            <!--<version>3.0.2</version>-->
+            <!--<configuration>-->
+            <!--<effort>Max</effort>-->
+            <!--<threshold>Low</threshold>-->
+            <!--<xmlOutput>true</xmlOutput>-->
+            <!--</configuration>-->
             <!--</plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -585,16 +572,16 @@
                     </configuration>
                 </plugin>
                 <!--<plugin>-->
-                    <!--<groupId>org.codehaus.mojo</groupId>-->
-                    <!--<artifactId>findbugs-maven-plugin</artifactId>-->
-                    <!--<version>3.0.4</version>-->
-                    <!--<configuration>-->
-                        <!--<effort>Default</effort>-->
-                        <!--<threshold>High</threshold>-->
-                        <!--<xmlOutput>true</xmlOutput>-->
-                        <!--&lt;!&ndash; Optional directory to put findbugs xdoc xml report &ndash;&gt;-->
-                        <!--<xmlOutputDirectory>target/site</xmlOutputDirectory>-->
-                    <!--</configuration>-->
+                <!--<groupId>org.codehaus.mojo</groupId>-->
+                <!--<artifactId>findbugs-maven-plugin</artifactId>-->
+                <!--<version>3.0.4</version>-->
+                <!--<configuration>-->
+                <!--<effort>Default</effort>-->
+                <!--<threshold>High</threshold>-->
+                <!--<xmlOutput>true</xmlOutput>-->
+                <!--&lt;!&ndash; Optional directory to put findbugs xdoc xml report &ndash;&gt;-->
+                <!--<xmlOutputDirectory>target/site</xmlOutputDirectory>-->
+                <!--</configuration>-->
                 <!--</plugin>-->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -904,8 +891,8 @@
                 <artifactId>maven-scm-plugin</artifactId>
             </plugin>
             <!--<plugin>-->
-                <!--<groupId>org.codehaus.mojo</groupId>-->
-                <!--<artifactId>findbugs-maven-plugin</artifactId>-->
+            <!--<groupId>org.codehaus.mojo</groupId>-->
+            <!--<artifactId>findbugs-maven-plugin</artifactId>-->
             <!--</plugin>-->
             <plugin>
                 <groupId>org.pitest</groupId>
