GitHub API changes

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,8 +76,21 @@ jobs:
       steps:
 
         - run:
-            name: build-bdocs
-            command: ./build-docs.sh
+            name: build-docs
+            command: |
+              cd $(dirname $0)
+              DIR=$(pwd)
+              git clone https://github.com/sillelien/dollar project
+              git checkout $CIRCLE_BRANCH
+              mkdir -p dist
+              cd dist
+              git clone https://github.com/sillelien/dollar docs
+              cd docs
+              git checkout gh-pages
+              ls /root/dollar/project/dollar-docs/src/main/webapp/
+              jekyll build --source $DIR/project/dollar-docs/src/main/webapp/ --destination $DIR/dist/docs
+              cp -rf * $DIR/dist/docs || :
+
 
         - persist_to_workspace:
             root: .
