--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,7 @@ jobs:
             name: build-docs
             command: |
               set -x
-              cd
+              cd /srv/jekyll
               git clone https://github.com/sillelien/dollar project
               cd project
               git checkout $CIRCLE_BRANCH
@@ -94,7 +94,7 @@ jobs:
               git add *
               git commit -a -m "Updated docs from build"  || :
               git push || :
-              cd
+              cd /srv/jekyll
 
         - persist_to_workspace:
             root: .
