--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,8 +89,7 @@ jobs:
               git clone https://github.com/sillelien/dollar docs
               cd docs
               git checkout gh-pages
-              ls ~/project/dollar-docs/src/main/webapp/
-              sudo jekyll build --source ~/project/dollar-docs/src/main/webapp/ --destination ~/dist/docs
+              jekyll build --source /srv/jekyll/project/dollar-docs/src/main/webapp/ --destination /srv/jekyll/dist/docs
               git add *
               git commit -a -m "Updated docs from build"  || :
               git push || :
