--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -221,8 +221,10 @@ workflows:
   build-test-and-deploy:
     jobs:
       - build
+      
       - dev-docs
-      - docs
+
+      - docs:
         requires:
           - dev-docs
 
