--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,7 +104,7 @@ jobs:
               - dist/docs
 
 
-    dev-docs:
+    devdocs:
       <<: *defaults
 
       steps:
@@ -222,7 +222,7 @@ workflows:
     jobs:
       - build
 
-      - dev-docs
+      - devdocs
 
       - docs:
         requires:
