GitHub API changes

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -116,7 +116,10 @@ jobs:
 
         - run:
             name: build-docs
-            command: mkdir -p dist/devdocs && mvn -q -Dmaven.test.skip -DskipDeploy -DstagingDirectory=./dist/devdocs/ install site:site site:stage
+            command: |
+              mkdir -p dist/devdocs
+              ./set-version.sh
+              mvn -q -Dmaven.test.skip -DskipDeploy -DstagingDirectory=dist/devdocs/ install site:site site:stage
 
         - persist_to_workspace:
             root: .
