--- a/dollar-runtime/pom.xml
+++ b/dollar-runtime/pom.xml
@@ -169,7 +169,7 @@
                                 <exclude>com.sillelien.dollar.api.var*</exclude>
                                 <exclude>com.sillelien.dollar.script.api.**</exclude>
                                 <exclude>com.sillelien.dollar.main.**</exclude>
-                                <exclude>com.sillelien.dollar.main.java</exclude>
+                                <exclude>com.sillelien.dollar.main.java.**</exclude>
                                 <exclude>com.sillelien.jas.**</exclude>
                             </excludes>
                         </relocation>
