GitHub API changes

--- a/dollar-runtime/pom.xml
+++ b/dollar-runtime/pom.xml
@@ -166,7 +166,7 @@
                             <shadedPattern>dollar.v${buildNumber}</shadedPattern>
                             <excludes>
                                 <exclude>com.sillelien.dollar.api.**</exclude>
-                                <exclude>com.sillelien.dollar.api.var*</exclude>
+                                <exclude>com.sillelien.dollar.api.var</exclude>
                                 <exclude>com.sillelien.dollar.script.api.**</exclude>
                                 <exclude>com.sillelien.dollar.main.**</exclude>
                                 <exclude>com.sillelien.dollar.main.java.**</exclude>
@@ -188,7 +188,12 @@
                             <pattern>com</pattern>
                             <shadedPattern>dollar.v${buildNumber}.thirdparty.com</shadedPattern>
                             <excludes>
-                                <exclude>com.sillelien.**</exclude>
+                                <exclude>com.sillelien.dollar.api.**</exclude>
+                                <exclude>com.sillelien.dollar.api.var</exclude>
+                                <exclude>com.sillelien.dollar.script.api.**</exclude>
+                                <exclude>com.sillelien.dollar.main.**</exclude>
+                                <exclude>com.sillelien.dollar.main.java.**</exclude>
+                                <exclude>com.sillelien.jas.**</exclude>
                             </excludes>
                         </relocation>
                         <relocation>
