--- a/dollar-plugins/pom.xml
+++ b/dollar-plugins/pom.xml
@@ -85,7 +85,7 @@
                         <!--</relocation>-->
                         <relocation>
                             <pattern>org</pattern>
-                            <shadedPattern>dollar.plugin.${plugin.name}.r${buildNumber}</shadedPattern>
+                            <shadedPattern>dollar.plugin.${plugin.name}.r${buildNumber}.org</shadedPattern>
                             <excludes>
                                 <exclude>org.apache.log4j.**</exclude>
                                 <exclude>org.apache.camel.**</exclude>
