--- a/dollar-plugins/pom.xml
+++ b/dollar-plugins/pom.xml
@@ -100,6 +100,7 @@
                             <pattern>com</pattern>
                             <excludes>
                                 <exclude>com.sun.**</exclude>
+                                <exclude>com.google.common.**</exclude>
                                 <exclude>com.thoughtworks.**</exclude>
                                 <exclude>com.sillelien.dollar.**</exclude>
                                 <exclude>com.sillelien.dollar.api.**</exclude>
