Guava as fixed dependency

--- a/dollar-runtime/pom.xml
+++ b/dollar-runtime/pom.xml
@@ -204,6 +204,7 @@
                                 <exclude>com.sillelien.dollar.main.**</exclude>
                                 <exclude>com.sillelien.dollar.main.java.**</exclude>
                                 <exclude>com.sillelien.jas.**</exclude>
+                                <exclude>com.google.common.**</exclude>
                             </excludes>
                         </relocation>
                         <relocation>
