--- a/dollar-plugins/pom.xml
+++ b/dollar-plugins/pom.xml
@@ -59,7 +59,6 @@
                             <exclude>junit:junit</exclude>
                             <!--We don't mess with Guava, it is a required dependency across all components.-->
                             <exclude>com.google.guava:guava</exclude>
-                            <exclude>com.thoughtworks.xstream:xstream</exclude>
                             <exclude>log4j:log4j:jar:</exclude>
                             <exclude>org.slf4j:slf4j-api</exclude>
                             <exclude>org.slf4j:slf4j-log4j12</exclude>
@@ -76,7 +75,7 @@
                                 <exclude>META-INF/*.RSA</exclude>
                                 <exclude>META-INF/*.INF</exclude>
                                 <exclude>com.google.common.**</exclude>
-
+                                <exclude>org.mapdb:mapdb</exclude>
                                 <!--<exclude>META-INF/license</exclude>-->
                             </excludes>
                         </filter>
@@ -97,6 +96,7 @@
                                 <exclude>org.xml.**</exclude>
                                 <exclude>org.xmlpull.**</exclude>
                                 <exclude>org.slf4j.**</exclude>
+                                <exclude>org.mapdb</exclude>
                             </excludes>
                         </relocation>
                         <relocation>
